2006-09-20  David Kastrup  <dak@gnu.org>

	* tex-buf.el: Let `TeX-active-buffer' return nil if there is no
	command buffer.  Change copyright notice from Kresten Krab Thorup
	to reflect assignment to FSF.

	* latex.el: Change copyright notice.

	* tex.el: Change copyright notice.

	* doc/tex-ref.tex: Change copyright notice.

	* doc/auctex.texi: Change copyright notice.

2006-09-17  Reiner Steib  <Reiner.Steib@gmx.de>

	* doc/faq.texi: Fix syntax error.

2006-09-16  Ralf Angeli  <angeli@caeruleus.net>

	* doc/faq.texi: Explain the abbreviation AUC.

2006-09-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* toolbar-x.el (toolbarx-emacs-refresh): Don't modify global value
	of `tool-bar-map'.

2006-09-11  Reiner Steib  <Reiner.Steib@gmx.de>

	* latex.el (LaTeX-math-default): Remove X2ABB for \Pr.  Suggested
	by Adam Johnson <thu_zh@hotmail.com>.

2006-09-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* latex.el: Use read-kbd-macro instead of kbd for LaTeX-math-mode.
	(LaTeX-math-default): Add bindings for \var... symbols.
	(LaTeX-math-default): Change binding for \vartheta.

2006-09-08  David Kastrup  <dak@gnu.org>

	* latex.el: Allow strings for keys in LaTeX-math-mode.
	(LaTeX-math-list): Allow string for key.

2006-09-06  Ralf Angeli  <angeli@caeruleus.net>

	* doc/auctex.texi (Mathematics): Align description of
	`LaTeX-math-list' with reality.

2006-08-25  David Kastrup  <dak@gnu.org>

	* doc/preview-faq.texi (Requirements, Installation Trouble)
	(Customization): Update and remove stuff, mostly because
	preview-latex is integrated with AUCTeX now.

2006-08-30  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (TeX-latex-mode): Check if `tool-bar-mode' is bound.

	* tex.el (TeX-plain-tex-mode): Check if `tool-bar-mode' is bound.

2006-08-26  Ralf Angeli  <angeli@caeruleus.net>

	* doc/auctex.texi (European): Make replacement of
	language-specific hyphen strings more obvious.

2006-08-25  Ralf Angeli  <angeli@caeruleus.net>
